--- a/Heart__Disease_tabpfn_vs_xgb.ipynb
+++ b/Heart__Disease_tabpfn_vs_xgb.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNEOD1edjj/ru2kYmUxlTKA",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -703,8 +705,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ChristopherParrisMD/TabPFN-Benchmark-Project/blob/main/Heart__Disease_tabpfn_vs_xgb.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "TSKi0tcP3f_7"
       },
@@ -740,7 +752,7 @@
         "id": "xnR-PRwE3sYu",
         "outputId": "0e830831-5179-4e7e-f18c-607abcc6a706"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1179,7 +1191,7 @@
         "id": "NZoy6DZf-4b-",
         "outputId": "a65c8d15-5fed-4fb4-dcc4-1b6b90b28d8a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1204,7 +1216,7 @@
         "id": "ysdXeUEoGEg1",
         "outputId": "768e54c8-0c22-4038-8f91-97ba39dd378c"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1225,7 +1237,7 @@
       "metadata": {
         "id": "VpmO1yc_GPS8"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1241,7 +1253,7 @@
       "metadata": {
         "id": "sOSuPs2QOQP9"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1268,7 +1280,7 @@
       "metadata": {
         "id": "qvcQW4tRPpW4"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1280,7 +1292,7 @@
       "metadata": {
         "id": "2Iqy8ThsPwkD"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1329,7 +1341,7 @@
         "id": "ByflQ3hHQLb9",
         "outputId": "cbb75a11-7df5-4edd-a43d-26b57d19ccb7"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1405,7 +1417,7 @@
         "id": "sjIIPA0uQavw",
         "outputId": "e1dfd798-72c0-446b-abf1-ae075dbe3044"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1443,7 +1455,7 @@
         "id": "o_kbh4IvVr8J",
         "outputId": "3dc5dbaf-8362-4ed5-8907-bba53dcd1fde"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
